[gd_scene load_steps=6 format=3 uid="uid://cwmcrxufcpyaf"]

[ext_resource type="Script" path="res://ficha_data_displayer.gd" id="1_jnx7d"]
[ext_resource type="Material" uid="uid://73yw0v475f84" path="res://materialRainbow.tres" id="1_ts10a"]
[ext_resource type="PackedScene" uid="uid://burokdyu3kdo6" path="res://data_bloque.tscn" id="3_thlvr"]

[sub_resource type="Gradient" id="Gradient_1ikl3"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ax5op"]
gradient = SubResource("Gradient_1ikl3")
height = 32

[node name="FichaDataDisplayer" type="PanelContainer"]
material = ExtResource("1_ts10a")
offset_left = 112.0
offset_right = 384.0
offset_bottom = 326.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_jnx7d")
data_bloque_scene = ExtResource("3_thlvr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="contenedor" type="VBoxContainer" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/contenedor"]
layout_mode = 2

[node name="HBoxContainer2" type="VBoxContainer" parent="MarginContainer/contenedor/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/contenedor/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelNombre" type="Label" parent="MarginContainer/contenedor/MarginContainer/HBoxContainer2/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "nombre"
horizontal_alignment = 1

[node name="ImagenFicha" type="TextureRect" parent="MarginContainer/contenedor/MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(252, 252)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("GradientTexture2D_ax5op")
expand_mode = 4

[node name="DataPanelContainer" type="PanelContainer" parent="MarginContainer/contenedor"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/contenedor/DataPanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/contenedor/DataPanelContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="LabelDescripcion" type="Label" parent="MarginContainer/contenedor/DataPanelContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(252, 23)
layout_mode = 2
text = "data"
autowrap_mode = 3

[connection signal="resized" from="MarginContainer/contenedor" to="MarginContainer/contenedor" method="_on_resized"]
